force-app/main/default/objects/Profit_Distribution__c/Profit_Distribution__c.object-meta.xml
<CustomObject>
    <label>Profit Distribution</label>
    <nameField>
        <label>Profit Distribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profit Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>