force-app/main/default/objects/Profit_Distribution__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Investor</label>
    <referenceTo>Investor__c</referenceTo>
    <relationshipLabel>Profit Distributions</relationshipLabel>
    <relationshipName>Profit_Distributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>