force-app/main/default/objects/Profit_Distribution__c/fields/Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Profit_Amount__c</fullName>
    <label>Profit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>